# WeatherStatistics

./: CMakeLists.txt  README.md
include/: Statistics.hpp  WeatherStatistics.hpp
src/: WeatherStatistics.cpp  main.cpp
